# biomedical-segmentation

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: default.yaml
models/: __init__.py  base_model.py  resunet.py  unet.py
scripts/: __init__.py  evaluate.py  predict.py  train.py
tests/: __init__.py  test_data_loader.py  test_helpers.py  test_metrics.py  test_models.py
utils/: __init__.py  data_loader.py  helpers.py  metrics.py  visualization.py
