[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomedical-segmentation"
version = "0.1.0"
description = "Biomedical Image Segmentation with Deep Learning"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "numpy==1.24.3",
    "pandas==2.0.2",
    "scikit-learn==1.2.2",
    "scikit-image==0.20.0",
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "tqdm==4.65.0",
    "opencv-python==4.7.0.72",
    "Pillow==9.5.0",
    "albumentations==1.3.1",
    "tensorboard==2.20.0",
    "pyyaml==6.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.3.3",
    "pytest==7.3.1",
    "jupyter==1.0.0",
    "jupyterlab==3.6.3",
    "black==23.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
    "mypy==1.4.1"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "notebooks"
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
